# littlejohn

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs  realdebrid.rs  test_scrapers.rs  ui.rs
src/scrapers/: bitsearch.rs  ilcorsaronero.rs  log.rs  mod.rs  tpb.rs  x1337.rs  yts.rs
